--- a/B9A3-Hockeys-main/index.html
+++ b/B9A3-Hockeys-main/index.html
@@ -29,13 +29,14 @@
   </style>
 </head>
 <body>
-  <header class="">
-    <div class="navbar bg-white md:container mx-auto">
+  <!-- header_part -->
+  <header>
+    <div class="navbar bg-white xl:container mx-auto">
       <div class="navbar-start">
         <a class="lg:hidden text-black sm:block"><i class="fa-solid fa-bars pr-4 text-xl"></i></a>
         <h2 class="lg:text-4xl sm:text-2xl font-extrabold text-black">Hockey<span class="text-red-500 ">’</span>s</h2>
       </div>
-      <div class="navbar-center sm:hidden lg:flex">
+      <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1 text-zinc-700 text-base">
           <li><a class="text-red-500">Home</a></li>
           <li><a>About</a></li>
@@ -53,6 +54,42 @@
     </div>
   </header>
 
-  
+  <!-- banner part -->
+  <section class="xl:container mx-auto">
+    <div class="carousel w-full">
+      <div id="slide1" class="carousel-item relative w-full">
+        <img src="../B9A3-Hockeys-main/Images/1.png" class="relative w-full h-5/6 rounded-3xl" />
+        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-1/4 ">
+          <a href="#slide4" class="btn btn-circle">❮</a> 
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+          <div class="absolute lg:bottom-1/4 lg:right-20 sm:top-64 sm:rounded-xl bg-black text-white lg:w-2/5 space-y-6 p-6 sm:w-full">
+            <h4 class="font-extrabold text-2xl">Meet all the heroes from the field</h4>
+            <p class="text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          </div>
+      </div> 
+      <div id="slide2" class="carousel-item relative w-full">
+        <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full h-5/6 rounded-3xl" />
+        <div class="absolute  transform -translate-y-1/2 left-5 right-5 bottom-1/4">
+          <a href="#slide1" class="btn btn-circle">❮</a> 
+          <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+      </div> 
+      <div id="slide3" class="carousel-item relative w-full">
+        <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full h-5/6 rounded-3xl" />
+        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-1/4">
+          <a href="#slide2" class="btn btn-circle">❮</a> 
+          <a href="#slide4" class="btn btn-circle">❯</a>
+        </div>
+      </div> 
+      <div id="slide4" class="carousel-item relative w-full">
+        <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full h-5/6 rounded-3xl" />
+        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-1/4">
+          <a href="#slide3" class="btn btn-circle">❮</a> 
+          <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
