--- a/B9A3-Hockeys-main/index.html
+++ b/B9A3-Hockeys-main/index.html
@@ -15,6 +15,7 @@
         extend: {
           colors: {
             'primary-color': '#FF4240',
+            'secondary-color' : '#131318',
           }
         }
       }
@@ -24,14 +25,14 @@
   <style>
     body{
       font-family: "Manrope", sans-serif;
-  
+      background-color: #E7E7E8;
     }
   </style>
 </head>
 <body>
   <!-- header_part -->
-  <header>
-    <div class="navbar bg-white xl:container mx-auto">
+  <header class="py-4">
+    <div class="navbar lg:container md:container sm:container mx-auto">
       <div class="navbar-start">
         <a class="lg:hidden text-black sm:block"><i class="fa-solid fa-bars pr-4 text-xl"></i></a>
         <h2 class="lg:text-4xl sm:text-2xl font-extrabold text-black">Hockey<span class="text-red-500 ">’</span>s</h2>
@@ -55,38 +56,152 @@
   </header>
 
   <!-- banner part -->
-  <section class="xl:container mx-auto">
-    <div class="carousel w-full">
-      <div id="slide1" class="carousel-item relative w-full">
-        <img src="../B9A3-Hockeys-main/Images/1.png" class="relative w-full h-5/6 rounded-3xl" />
-        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-1/4 ">
+  <section class="lg:container md:container sm:container mx-auto">
+    <div class="carousel w-full ">
+      <div id="slide1" class="carousel-item relative w-full h-5/6">
+        <img src="../B9A3-Hockeys-main/Images/1.png" class="relative w-full  rounded-3xl" />
+        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-2">
           <a href="#slide4" class="btn btn-circle">❮</a> 
           <a href="#slide2" class="btn btn-circle">❯</a>
         </div>
-          <div class="absolute lg:bottom-1/4 lg:right-20 sm:top-64 sm:rounded-xl bg-black text-white lg:w-2/5 space-y-6 p-6 sm:w-full">
-            <h4 class="font-extrabold text-2xl">Meet all the heroes from the field</h4>
-            <p class="text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <div class="absolute lg:bottom-1/4 lg:right-20 sm:top-80 sm:rounded-xl bg-black text-white lg:w-2/5 space-y-5 p-4 sm:w-full">
+            <h4 class="font-extrabold lg:text-2xl sm:text-xl">Meet all the heroes from the field</h4>
+            <p class="lg:text-base sm:text-sm">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
           </div>
       </div> 
       <div id="slide2" class="carousel-item relative w-full">
-        <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full h-5/6 rounded-3xl" />
-        <div class="absolute  transform -translate-y-1/2 left-5 right-5 bottom-1/4">
+        <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="relative w-full  rounded-3xl" />
+        <div class="absolute  transform -translate-y-1/2 left-5 right-5 bottom-2">
           <a href="#slide1" class="btn btn-circle">❮</a> 
           <a href="#slide3" class="btn btn-circle">❯</a>
         </div>
+        <div class="absolute lg:bottom-1/4 lg:right-20 sm:top-80 sm:rounded-xl bg-black text-white lg:w-2/5 space-y-5 p-4 sm:w-full">
+          <h4 class="font-extrabold lg:text-2xl sm:text-xl">Meet all the heroes from the field</h4>
+          <p class="lg:text-base sm:text-sm">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
       </div> 
       <div id="slide3" class="carousel-item relative w-full">
-        <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full h-5/6 rounded-3xl" />
-        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-1/4">
+        <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="relative w-full  rounded-3xl" />
+        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-2">
           <a href="#slide2" class="btn btn-circle">❮</a> 
           <a href="#slide4" class="btn btn-circle">❯</a>
         </div>
+        <div class="absolute lg:bottom-1/4 lg:right-20 sm:top-80 sm:rounded-xl bg-black text-white lg:w-2/5 space-y-5 p-4 sm:w-full">
+          <h4 class="font-extrabold lg:text-2xl sm-text-xl">Meet all the heroes from the field</h4>
+          <p class="lg:text-base sm:text-sm">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
       </div> 
       <div id="slide4" class="carousel-item relative w-full">
-        <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full h-5/6 rounded-3xl" />
-        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-1/4">
+        <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="relative w-full rounded-3xl" />
+        <div class="absolute transform -translate-y-1/2 left-5 right-5 bottom-2">
           <a href="#slide3" class="btn btn-circle">❮</a> 
           <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+        <div class="absolute lg:bottom-1/4 lg:right-20 sm:top-80 sm:rounded-xl bg-black text-white lg:w-2/5 space-y-5 p-4 sm:w-full">
+          <h4 class="font-extrabold lg:text-2xl sm:text-xl">Meet all the heroes from the field</h4>
+          <p class="lg:text-base sm:text-sm">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- club part -->
+  <section class="lg:container md:container sm:container mx-auto my-14">
+      <div class="title space-y-3">
+        <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Professional Hockeys Club</h2>
+        <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      </div>
+      <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+           <!-- first -->
+        <div class="card">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-red-500" style="--value:87;" role="progressbar"><span class="text-black font-extrabold text-2xl">87%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title font-semibold text-xl text-black">Prayer Facility</h2>
+            <p class="text-black text-base">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+        <!-- second -->
+        <div class="card">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-green-500" style="--value:95;" role="progressbar"><span class="text-black font-extrabold text-2xl">95%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title font-semibold text-xl text-black">Experienced Coach</h2>
+            <p class="text-black text-base">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+        <!-- third -->
+        <div class="card">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-amber-500" style="--value:90;" role="progressbar"><span class="text-black font-extrabold text-2xl">90%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title font-semibold text-xl text-black">Senior Player</h2>
+            <p class="text-black text-base">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+        <!-- four -->
+        <div class="card ">
+          <figure class="px-10 pt-10">
+            <div class="radial-progress text-blue-500" style="--value:80;" role="progressbar"><span class="text-black font-extrabold text-2xl">80%</span></div>
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title font-semibold text-xl text-black">Training Ground</h2>
+            <p class="text-black text-base">Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <!-- Program Sections -->
+  <section class="lg:container md:container sm:container mx-auto pb-14">
+    <div class="title space-y-3">
+      <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Program Sections</h2>
+      <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+    </div>
+    <!-- first program part -->
+    <div class="lg:flex sm:flex-1 gap-4 mt-6">
+      <div class="hero min-h-80 rounded-2xl sm:mb-4" style="background-image: url(../B9A3-Hockeys-main/Images/2.png);">
+        <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="max-w-md">
+            <h1 class="mb-3 text-3xl font-extrabold text-white">Junior Program</h1>
+            <p class="mb-6 text-base text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <div class="">
+              <a class="bg-primary-color text-white rounded-lg px-4 py-3 font-bold text-xl">Register Now!</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- second program part  -->
+      <div class="hero min-h-80 rounded-2xl" style="background-image: url(../B9A3-Hockeys-main/Images/3.png);">
+        <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="max-w-md">
+            <h1 class="mb-3 text-3xl font-extrabold text-white">Teenager Program</h1>
+            <p class="mb-6 text-base text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <div class="">
+              <a class="bg-primary-color text-white rounded-lg px-4 py-3 font-bold text-xl">Register Now!</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- last program part -->
+    <div class="hero min-h-80 rounded-2xl my-4 space-y-3" style="background-image: url(../B9A3-Hockeys-main/Images/4.png);">
+      <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-3 text-3xl font-extrabold text-white">Professional Program</h1>
+          <p class="mb-6 text-base text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+            enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+          <div class="">
+            <a class="bg-primary-color text-white rounded-lg px-4 py-3 font-bold text-xl">Register Now!</a>
+          </div>
         </div>
       </div>
     </div>
