finished new product part

--- a/B9A3-Hockeys-main/index.html
+++ b/B9A3-Hockeys-main/index.html
@@ -162,7 +162,7 @@
       <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
     </div>
     <!-- first program part -->
-    <div class="lg:flex sm:flex-1 gap-4 mt-6">
+    <div class="lg:flex sm:flex-1 gap-4 mt-7">
       <div class="hero min-h-80 rounded-2xl sm:mb-4" style="background-image: url(../B9A3-Hockeys-main/Images/2.png);">
         <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
         <div class="hero-content text-center text-neutral-content">
@@ -204,6 +204,138 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <!-- new product part -->
+  <section class="lg:container md:container sm:container mx-auto pb-14">
+    <div class="title space-y-3">
+      <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Our New Products</h2>
+      <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+    </div>
+    <div class="grid lg:grid-cols-2 sm:grid-cols-1 gap-4 mt-8 sm:my-7">
+      <!-- new product one -->
+      <div class="hero min-h-56 shadow-2xl rounded-xl">
+        <div class="hero-content flex-col lg:flex-row">
+          <img src="../B9A3-Hockeys-main/Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div class="new_product_content space-y-1 ">
+            <div class="rating gap-3 text-slate-600">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />5.0
+              <h6><i class="fa-solid fa-eye size-8"></i>20</h6>
+              <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />200
+            </div>
+            <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
+            <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <div class="lg:flex justify-between sm:flex-1">
+              <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
+              <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- new_product_two -->
+      <div class="hero min-h-56 shadow-2xl rounded-xl">
+        <div class="hero-content flex-col lg:flex-row">
+          <img src="../B9A3-Hockeys-main/Images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div class="new_product_content space-y-1 ">
+            <div class="rating gap-3 text-slate-600">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />5.0
+              <h6><i class="fa-solid fa-eye size-8"></i>20</h6>
+              <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />200
+            </div>
+            <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
+            <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <div class="lg:flex justify-between sm:flex-1">
+              <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
+              <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- new_product_three -->
+      <div class="hero min-h-56 shadow-2xl rounded-xl">
+        <div class="hero-content flex-col lg:flex-row">
+          <img src="../B9A3-Hockeys-main/Images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div class="new_product_content space-y-1 ">
+            <div class="rating gap-3 text-slate-600">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />5.0
+              <h6><i class="fa-solid fa-eye size-8"></i>20</h6>
+              <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />200
+            </div>
+            <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
+            <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <div class="lg:flex justify-between sm:flex-1">
+              <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
+              <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- new_product_four -->
+      <div class="hero min-h-56 shadow-2xl rounded-xl">
+        <div class="hero-content flex-col lg:flex-row">
+          <img src="../B9A3-Hockeys-main/Images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div class="new_product_content space-y-1 ">
+            <div class="rating gap-3 text-slate-600">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />5.0
+              <h6><i class="fa-solid fa-eye size-8"></i>20</h6>
+              <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />200
+            </div>
+            <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
+            <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <div class="lg:flex justify-between sm:flex-1">
+              <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
+              <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- new_product_five -->
+      <div class="hero min-h-56 shadow-2xl rounded-xl">
+        <div class="hero-content flex-col lg:flex-row">
+          <img src="../B9A3-Hockeys-main/Images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div class="new_product_content space-y-1 ">
+            <div class="rating gap-3 text-slate-600">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />5.0
+              <h6><i class="fa-solid fa-eye size-8"></i>20</h6>
+              <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />200
+            </div>
+            <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
+            <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <div class="lg:flex justify-between sm:flex-1">
+              <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
+              <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- new_product_six -->
+      <div class="hero min-h-56 shadow-2xl rounded-xl">
+        <div class="hero-content flex-col lg:flex-row">
+          <img src="../B9A3-Hockeys-main/Images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <div class="new_product_content space-y-1 ">
+            <div class="rating gap-3 text-slate-600">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />5.0
+              <h6><i class="fa-solid fa-eye size-8"></i>20</h6>
+              <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />200
+            </div>
+            <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
+            <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <div class="lg:flex justify-between sm:flex-1">
+              <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
+              <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Client Question -->
+  <section class="lg:container md:container sm:container mx-auto pb-14">
+    <div class="title space-y-3">
+      <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Our New Products</h2>
+      <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
     </div>
   </section>
 </body>
