--- a/B9A3-Hockeys-main/index.html
+++ b/B9A3-Hockeys-main/index.html
@@ -334,8 +334,152 @@
   <!-- Client Question -->
   <section class="lg:container md:container sm:container mx-auto pb-14">
     <div class="title space-y-3">
-      <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Our New Products</h2>
+      <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Clients Question</h2>
       <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+    </div>
+    <div class="question_part min-h-7 mt-7">
+      <div class="hero min-h-64 hero-content flex-col lg:flex-row justify-between rounded-lg shadow-2xl">
+        <div class="">
+          <img src="../B9A3-Hockeys-main/Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
+        </div>
+        <div class="w-4/6">
+          <div class="collapse collapse-plus shadow-sm">
+            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <div class="collapse-title text-xl font-bold text-black">
+              Our Equipment
+            </div>
+            <div class="collapse-content text-base text-black"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus shadow-sm">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-bold text-black">
+              Hockey Training
+            </div>
+            <div class="collapse-content text-base text-black"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus shadow-sm">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-bold text-black">
+              Private Lessons
+            </div>
+            <div class="collapse-content text-base text-black"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus shadow-sm">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-bold text-black">
+              Ski Touring
+            </div>
+            <div class="collapse-content text-base text-black"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus shadow-sm">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-bold text-black">
+              Booking
+            </div>
+            <div class="collapse-content text-base text-black"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus shadow-sm">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-bold text-black">
+              Pricings
+            </div>
+            <div class="collapse-content text-base text-black"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- contact part  -->
+  <section class="lg:container md:container sm:container mx-auto pb-14">
+    <div class="title space-y-3">
+      <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Get In Touch</h2>
+      <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+    </div>
+    <div class="rounded-xl my-10 shadow-xl">
+      <div class="hero min-h-svh hero-content flex-col lg:flex-row justify-between">
+        <div class="shadow-xl rounded-xl p-6 space-y-6 m-8">
+          <div class="p-8 space-y-3 rounded-xl border bg-slate-200">
+            <figure><img src="../B9A3-Hockeys-main/Images/Group 1171275317.png" alt="Shoes" /></figure>
+            <div class="">
+              <p class="text-base text-black">Phone Number :</p>
+              <h2 class="text-lg font-extrabold text-black">(+62) 123-321-543</h2>
+            </div>
+          </div>
+          <div class="p-8 space-y-3 rounded-xl border bg-red-100">
+            <figure><img src="../B9A3-Hockeys-main/Images/Group 1171275318.png" alt="Shoes" /></figure>
+            <div class="">
+              <p class="text-base text-black">Email : </p>
+              <h2 class="text-lg font-extrabold text-black">hockeys@support.com</h2>
+            </div>
+          </div>
+          <div class="p-8 space-y-3 rounded-xl border bg-teal-100 ">
+            <figure><img src="../B9A3-Hockeys-main/Images/Group 1171275321.png" alt="Shoes" /></figure>
+            <div class="">
+              <p class="text-base text-black">Location :</p>
+              <h2 class="text-lg font-extrabold text-black">(+62) 123-321-543</h2>
+            </div>
+          </div>
+        </div>
+        <div class="w-2/3">
+          <form class=" grid grid-cols-2 gap-10 ">
+            <div class="form-control">
+              <label class="label">
+                <span class="label-text text-xl font-bold text-black w-100">Your Name</span>
+              </label>
+              <input type="name" placeholder="Enter your full name" class="text-base rounded-xl shadow-2xl bg-white p-2 text-black"  />
+            </div>
+            <div class="form-control">
+              <label class="label">
+                <span class="label-text text-xl font-bold text-black">Your Email</span>
+              </label>
+              <input type="email" placeholder="Enter your email" class="text-base rounded-xl shadow-2xl bg-white p-2 text-black" />
+            </div>
+            <div class="form-control">
+              <label class="label">
+                <span class="label-text text-xl font-bold text-black">Subject</span>
+              </label>
+              <input type="name" placeholder="Enter your subject" class="text-base rounded-xl shadow-2xl bg-white p-2 text-black" />
+            </div>
+            <div class="form-control">
+              <label class="label">
+                <span class="label-text text-xl font-bold text-black">Phone Number</span>
+              </label>
+              <input type="name" placeholder="Enter your phone number" class="text-base rounded-xl shadow-2xl bg-white p-2 text-black" />
+            </div>
+          </form>
+          <div class="form-control mt-10">
+            <label class="label">
+              <span class="label-text text-xl font-bold text-black">Message</span>
+            </label>
+            <textarea class="w-100 text-base rounded-xl shadow-2xl bg-white p-2 text-black" placeholder="Write your message"></textarea>
+          </div>
+          <div class="mt-10 w-100 text-center">
+            <a class="bg-primary-color text-white rounded-lg px-4 py-3 font-bold text-xl">Register Now!</a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center rounded-xl m-5  shadow-xl">
+        <h3 class="font-extrabold text-2xl">Social Media</h3>
+        <div class="flex justify-center font-extrabold text-2xl gap-4 text-center">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-github"></i>
+        </div>
+      </div>
     </div>
   </section>
 </body>
