full project done

--- a/B9A3-Hockeys-main/index.html
+++ b/B9A3-Hockeys-main/index.html
@@ -30,6 +30,7 @@
   </style>
 </head>
 <body>
+  <main>
   <!-- header_part -->
   <header class="py-4">
     <div class="navbar lg:container md:container sm:container mx-auto">
@@ -226,7 +227,7 @@
             </div>
             <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
             <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <div class="lg:flex justify-between sm:flex-1">
+            <div class="flex justify-between">
               <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
               <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
             </div>
@@ -245,7 +246,7 @@
             </div>
             <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
             <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <div class="lg:flex justify-between sm:flex-1">
+            <div class="flex justify-between">
               <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
               <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
             </div>
@@ -264,7 +265,7 @@
             </div>
             <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
             <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <div class="lg:flex justify-between sm:flex-1">
+            <div class="flex justify-between">
               <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
               <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
             </div>
@@ -283,7 +284,7 @@
             </div>
             <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
             <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <div class="lg:flex justify-between sm:flex-1">
+            <div class="flex justify-between ">
               <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
               <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
             </div>
@@ -302,7 +303,7 @@
             </div>
             <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
             <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <div class="lg:flex justify-between sm:flex-1">
+            <div class="flex justify-between">
               <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
               <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
             </div>
@@ -321,7 +322,7 @@
             </div>
             <h4 class="text-xl font-extrabold text-black">World Cup Flags Football</h4>
             <p class="text-base text-black">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-            <div class="lg:flex justify-between sm:flex-1">
+            <div class="flex justify-between">
               <h3 class="text-red-500 font-extrabold text-lg">Price - $22.00</h3>
               <h3 class="text-slate-600 text-base"><i class="fa-solid fa-cart-shopping "></i> Delivery Fee : Free</h3>
             </div>
@@ -408,24 +409,24 @@
       <h2 class="text-center font-extrabold sm:text-xl lg:text-4xl text-black">Get In Touch</h2>
       <p class="lg:w-1/2 sm:w-1/3 mx-auto text-center sm:text-sm lg:text-base text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
     </div>
-    <div class="rounded-xl my-10 shadow-xl">
-      <div class="hero min-h-svh hero-content flex-col lg:flex-row justify-between">
+    <div class="min-h-dvh my-4">
+      <div class="hero hero-content flex-col lg:flex-row justify-between">
         <div class="shadow-xl rounded-xl p-6 space-y-6 m-8">
-          <div class="p-8 space-y-3 rounded-xl border bg-slate-200">
+          <div class="p-8 space-y-2 rounded-xl border bg-slate-200">
             <figure><img src="../B9A3-Hockeys-main/Images/Group 1171275317.png" alt="Shoes" /></figure>
             <div class="">
               <p class="text-base text-black">Phone Number :</p>
               <h2 class="text-lg font-extrabold text-black">(+62) 123-321-543</h2>
             </div>
           </div>
-          <div class="p-8 space-y-3 rounded-xl border bg-red-100">
+          <div class="p-8 space-y-2 rounded-xl border bg-red-100">
             <figure><img src="../B9A3-Hockeys-main/Images/Group 1171275318.png" alt="Shoes" /></figure>
             <div class="">
               <p class="text-base text-black">Email : </p>
               <h2 class="text-lg font-extrabold text-black">hockeys@support.com</h2>
             </div>
           </div>
-          <div class="p-8 space-y-3 rounded-xl border bg-teal-100 ">
+          <div class="p-8 space-y-2 rounded-xl border bg-teal-100 ">
             <figure><img src="../B9A3-Hockeys-main/Images/Group 1171275321.png" alt="Shoes" /></figure>
             <div class="">
               <p class="text-base text-black">Location :</p>
@@ -466,21 +467,58 @@
             </label>
             <textarea class="w-100 text-base rounded-xl shadow-2xl bg-white p-2 text-black" placeholder="Write your message"></textarea>
           </div>
-          <div class="mt-10 w-100 text-center">
-            <a class="bg-primary-color text-white rounded-lg px-4 py-3 font-bold text-xl">Register Now!</a>
-          </div>
-        </div>
-      </div>
-      <div class="text-center rounded-xl m-5  shadow-xl">
-        <h3 class="font-extrabold text-2xl">Social Media</h3>
-        <div class="flex justify-center font-extrabold text-2xl gap-4 text-center">
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-github"></i>
+          <button class="border-none py-3 rounded-2xl w-full bg-primary-color mt-10 text-white font-bold text-xl">Register Now!</button>
         </div>
       </div>
     </div>
+    <div class="text-center rounded-xl my-5 py-5 space-y-4 shadow-2xl">
+      <h3 class="font-extrabold text-2xl text-black">Social Media</h3>
+      <div class="flex justify-center font-extrabold text-2xl gap-4 text-center text-black">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
+    </div>
   </section>
+ </main>
+<!-- footer section  -->
+  <footer class="py-10 bg-base-200">
+    <div class="container mx-auto lg:grid lg:grid-cols-3 lg:text-left sm:text-center">
+      <div class="space-y-5">
+        <h2 class="text-2xl font-extrabold text-white mb-3">Get In Touch</h2>
+        <p class="text-base text-white mb-2">Dit amet consectetur.<br> Condimentum adipiscing aliquam turpis placerat dolor.<br> Purus urna in sit nullam proin. </p>
+        <div class="space-y-3 ">
+        <p class="text-base text-white"><i class="fa-solid fa-phone text-red-500 pr-2"></i>hockeys@support.com</p>
+        <p class="text-base text-white"><i class="fa-regular fa-envelope text-red-500 pr-2"></i>(+62) 123-321-543</p>
+      </div>
+      </div> 
+      <div class="flex justify-between">
+        <div class="">
+          <h6 class="font-bold text-white text-lg mb-5">Company</h6> 
+          <a href="#" class="text-white text-base">About us</a><br>
+          <a href="#" class="text-white text-base">Leadership</a><br>
+          <a href="#" class="text-white text-base">Careers</a><br>
+          <a href="#" class="text-white text-base">News & Article</a><br>
+          <a href="#" class="text-white text-base">Legal Notice</a>
+        </div> 
+        <div class="">
+          <h6 class="font-bold text-white text-lg mb-5">Support</h6> 
+          <a href="#" class="text-white text-base">Help Center</a><br>
+          <a href="#" class="text-white text-base">FAQ</a><br>
+          <a href="#" class="text-white text-base">Ticket Support</a><br>
+          <a href="#" class="text-white text-base">Contact Us</a>
+        </div> 
+      </div>
+      <div class="lg:pl-64">
+        <h6 class="font-bold text-white text-lg mb-5">Services</h6> 
+        <a href="#" class="text-white text-base">Academy</a><br>
+        <a href="#" class="text-white text-base">Group Lesson</a><br>
+        <a href="#" class="text-white text-base">Private Lesson</a><br>
+        <a href="#" class="text-white text-base">Hockeys for kids</a><br>
+        <a href="#" class="text-white text-base">Hockeys for Adult</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
